# search-engine-simulator

./: .gitignore  .gitmodules  CMakeLists.txt  base64-encode-users.sh  http-flood-demonstration.sh  http-flood.sh  mysql-setup.sh  mysql_setup.sh  sqli-demonstration.sh
api-server/: CMakeLists.txt  config.ini  server.ini
api-server/include/: config-provider.h  options.h  provider.h
api-server/schemas/: pair-schema.json
api-server/src/: config-provider.cpp  options.cpp  provider.cpp  server.cpp
cache-server/: config.ini
cache-server/include/: cache-provider.h
cache-server/src/: cache-provider.cpp  server.cpp
cmake/: api-server.cmake  cache-server.cmake  config-server.cmake  realtime-server.cmake
config-server/: config.ini  useful-curls.txt
config-server/include/: config-provider.h
config-server/requests/: attacker-insert-user-request.json  insert-pair-valid-request.json  insert-user-invalid-request.json  insert-user-valid-request.json
config-server/schemas/: pair-schema.json  user-schema.json
config-server/src/: config-provider.cpp  server.cpp
realtime-server/: config.ini
realtime-server/include/: flights-provider.h
realtime-server/src/: flights-provider.cpp  server.cpp
sql/: create-tables.sql
utils/include/: flight.h  mysql-provider.h  options.h  pair.h  pointer-wrapper.h  server-common.h  server-exceptions.h  user-type.h  user.h
utils/src/: mysql-provider.cpp  options.cpp
